# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

template("ohos_taihe") {
  forward_variables_from(invoker, "*")

  deps = []
  inputs = []
  outputs = []

  action(target_name) {
    script = "//prebuilts/taihe/bin/taihec"
    args = [
      "-I",
      rebase_path("$root_out_dir/taihe", root_build_dir),
      "-O",
      rebase_path("$root_out_dir/taihe/out/$subsystem_name/$part_name",
                  root_build_dir),
      "-a",
      "--ani",
    ]
    deps = invoker.deps
    inputs = invoker.inputs
    outputs = invoker.outputs
  }
}
